sg.tf
resource "aws_security_group" "fawaz-tfe-es-sg" {
  name        = "tfe-fawaz-es-sg"
  description = "Allow HTTP and SSH traffic via Terraform"
  vpc_id      = aws_vpc.fawaz-tfe-es-vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8800
    to_port     = 8800
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["49.36.222.156/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "fawaz-tfe-es-sg-db03" {
  name        = "tfe-fawaz-es-sg-db03"
  description = "Allow HTTP and SSH traffic via Terraform"
  vpc_id      = aws_vpc.fawaz-tfe-es-vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
